src/components/Splash/Splash.module.css
.splashContainer {
  height: 100vh;
  width: 100%;
  overflow: hidden;
  background-repeat: no-repeat;
  background-size: cover;
}

.splashInner {
  display: flex;
  flex-direction: column;
  height: 100%;
  justify-content: space-between;
}

.splashLogo {
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 25px;
  opacity: 1;
  /* animation: slideDown 1s ease-out 2500ms; */
}

.splashImg {
  height: 100%;
  width: 160px;
  margin-left: auto;
  margin-right: auto;
}

@keyframes slideDown {
  0% {
    transform: translateY(-100%);
    opacity: 0;
  }

  50% {
    transform: translateY(8%);
  }

  65% {
    transform: translateY(-4%);
  }

  80% {
    transform: translateY(4%);
  }

  95% {
    transform: translateY(-2%);
  }

  100% {
    opacity: 1;
    transform: translateY(0%);
  }
}

.splashMainAnimation {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.splashAnimationInner {
  width: 400px;
  height: 80px;
  display: flex;
  justify-content: center;
  align-items: baseline;
}

.opacity0 {
  opacity: 0;
}

.opacity1 {
  opacity: 1;
}

.duration200 {
  transition-duration: 200ms !important;
}

.duration1000 {
  transition-duration: 1000ms !important;
}

.delay800 {
  transition-delay: 800ms;
}

.duration1400 {
  transition-duration: 1400ms !important;
}

.duration1900 {
  transition-duration: 1900ms !important;
}

.splashAnimationR {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  height: 49px;
  width: 35px;
  margin-right: 0.25rem;
}

.splashAnimationO {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  height: 49px;
  width: 38px;
}

.splashAnimationB {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  height: 57px;
  width: 37px;
}

.splashAnimationI {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  height: 47px;
  width: 16px;
  margin-left: 0.25rem;
  margin-right: 0.25rem;
}

.splashAnimationN {
  transition-property: opacity;
  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
  transition-duration: 150ms;
  height: 47px;
  width: 35px;
}

.splashUnderline {
  width: 300px;
  height: 1px;
  animation: splashLineBottom 4000ms ease-out;
}

@keyframes splashLineBottom {
  0% {
    opacity: 0;
    transform: scale(.1);
  }

  50% {
    opacity: 1;
    transform: scale(1);
  }

  100% {
    transform: scale(1);
  }
}

.splashBottom {
  width: 150px;
  height: 150px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 30px;
}

.splashBottomText {
  font-size: 12px;
  color: white;
  text-align: left;
  width: 100%;
}

.splashBottomLogo {
  animation: splashBottomLogo 2s ease-out;
  height: 67px;
  width: 100%;
  margin-top: auto;
  margin-bottom: auto;
  object-fit: contain;
}

@keyframes splashBottomLogo {
  0% {
    opacity: 0;
    transform: scale(.3);
  }

  50% {
    opacity: 1;
    transform: scale(1.05);
  }

  70% {
    opacity: 1;
    transform: scale(1);
  }

  100% {
    opacity: 1;
    transform: scale(1);
  }
}

@media (min-width: 1024px) {
  .splashLogo {
    margin-left: auto;
    padding-right: 25px;
  }

  .splashImg {
    margin-left: 0;
    margin-right: 0;
  }
}

